--- a/scss/_politicas.scss
+++ b/scss/_politicas.scss
@@ -1,8 +1,6 @@
 .poCoFather {
   border: none;
-  grid-template-columns: repeat(3, 1fr);
   display: flex;
-
   align-items: center;
   margin: auto;
   height: 125vh, auto;
@@ -11,19 +9,13 @@
 }
 .politicsContent {
   @extend .questionM;
-  // border: 3px solid grey;
-  // width: 80%;
-  // height: 110vh, auto;
-  // margin: auto;
-  // padding: 30px;
-  // display: block;
   overflow: visible;
   align-self: center;
   text-align: center;
   h1 {
     font-family: "Abril Fatface", cursive;
-    font-size: 2em;
-    color: rgb(255, 255, 255);
+    font-size: 2em,auto;
+    color: black;
     text-align: center;
     margin: 0;
     padding: 20px;
@@ -31,7 +23,7 @@
   h2 {
     font-family: "Abril Fatface", cursive;
     font-size: 1.5em;
-    color: rgb(255, 255, 255);
+    color: black;
     text-align: center;
     margin: 0;
     padding: 20px;
@@ -41,7 +33,7 @@
     font-size: 15px;
     line-height: 1.5em;
     padding: 3px;
-    color: rgba(0, 0, 0, 0.658);
+    color: black;
     margin: auto;
   }
 }
