--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -2,6 +2,7 @@
   body {
     text-align: center;
     margin: auto;
+    height: auto;
   }
   main {
     margin: auto;
@@ -35,9 +36,15 @@
       "t y z"
       "f f f";
   }
+  .menu{
+    width: 100%;
+    padding: 5px;
+    margin: 5px;
+    height: auto;
+  }
   .hijo {
     width: 300px;
-    border: solid rgb(55, 0, 255) 3px;
+    border: solid grey 3px;
     color: green;
     font-size: 1.5em;
     text-align: center;
@@ -47,6 +54,10 @@
     height: 100%;
     padding: auto;
   }
+  .sector{
+    width: 300px;
+    height: 300px;
+  }
   footer {
     height: auto;
   }
@@ -54,11 +65,11 @@
     body {
       background-color: rgb(11, 135, 243);
       text-align: center;
+      height: auto;
     }
     main {
       width: auto;
       height: auto;
-      display: grid;
     }
     .main-container {
       height: auto;
@@ -88,6 +99,10 @@
         "t y"
         "z f";
     }
+    .sector{
+      width: 300px;
+      height: 300px;
+    }
     .hijo {
       width: auto;
       border: solid rgb(4, 1, 15) 3px;
@@ -104,6 +119,7 @@
     body {
       background-color: black;
       text-align: center;
+      height: auto;
     }
     h2 {
       text-overflow: 10px;
@@ -129,7 +145,6 @@
     .main-container-marcas {
       width: 100%;
       padding: 120px;
-      // margin: 20px;
       height: auto;
       background-color: white;
       display: grid;
@@ -149,7 +164,10 @@
         "z"
         "f";
     }
-
+    .sector{
+      width: 250px;
+      height: 300px;
+    }
     .hijo {
       width: auto;
       border: solid rgb(247, 247, 247) 3px;
