--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -102,6 +102,13 @@
     .sector{
       width: 300px;
       height: 300px;
+      h2{
+        font-size: 0.75em;
+      }
+    }
+    .sector-img{
+      width: 100%, auto;
+      height: 180px;
     }
     .hijo {
       width: auto;
@@ -118,6 +125,7 @@
   @media only screen and (max-width: 500px) {
     body {
       background-color: black;
+      font-size: auto;
       text-align: center;
       height: auto;
     }
@@ -169,10 +177,10 @@
       height: 300px;
     }
     .hijo {
-      width: auto;
-      border: solid rgb(247, 247, 247) 3px;
+      // width: auto;
+      border: solid grey 3px;
       color: white;
-      font-size: 1.5em;
+      font-size: auto;
       text-align: center;
     }
     footer {
