--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -25,14 +25,14 @@ header {
   width: 100%;
   padding: auto;
   border: 1px solid grey;
-  
 }
 .slide img {
   height: 400px;
   width: 100%, auto;
 }
 .sCarrucel {
-  display: block;
+  
+  width: 100%;
   height: 400px;
   padding: 0;
 }
