--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,7 +1,7 @@
 .pFather {
   border:none;
   display: flex;
-  height: 110vh;
+  height: 110vh,auto;
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
