--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -59,13 +59,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/assets/image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
+              <img src="../image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img src="/assets/image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
+              <img src="../image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img src="/assets/image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
+              <img src="../image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -110,19 +110,19 @@
                 <td>$10000</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row">4</th>
                 <td>Dead Island</td>
                 <td>juego de accion</td>
                 <td>$500</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row">5</th>
                 <td>InFamous</td>
                 <td>Juego de Aventura</td>
                 <td>$2000</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row">6</th>
                 <td>Resistance</td>
                 <td>Juego de Disparos</td>
                 <td>$2000</td>
@@ -139,7 +139,7 @@
 
         <P>Copyright &copy; todos los derechos reservados HardwareShop</P>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
