--- a/scss/_politicas.scss
+++ b/scss/_politicas.scss
@@ -14,11 +14,10 @@
   text-align: center;
   h1 {
     font-family: "Abril Fatface", cursive;
-    font-size: 2em,auto;
+    font-size: 3em;
     color: black;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
+    margin: 0px;
+    padding: 0px;
   }
   h2 {
     font-family: "Abril Fatface", cursive;
