--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -59,13 +59,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/assets/image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
+            <img src="../image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img src="/assets/image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
+            <img src="../image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img src="/assets/image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
+            <img src="../image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -79,9 +79,9 @@
       </div>
     </div>
     <!-- Formulario -->
-    <div class="container-fluid">
+    <div class="container-fluid fFather">
       <div class="row">
-        <form class="col-xs-3 col-sm-9 col-lg-12 hijo formulario">
+        <form class="formulario">
           <fieldset>
             <legend>Formulario</legend>
             <div>
@@ -94,7 +94,7 @@
             </div> <br>
             <div>
               <label for="email">Completa tu Email:</label>
-              <input type="email" name="Email" placeholder="estoesunejemplo@ejemplo.com" required>
+              <input type="email" name="email" placeholder="estoesunejemplo@ejemplo.com" required>
             </div> <br>
             <div>
               <label for="comentario">Motivo de contacto:</label><br>
@@ -120,7 +120,7 @@
 
     <p>Copyright &copy; todos los derechos reservados HardwareShop</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
