--- a/assets/views/preguntas.html
+++ b/assets/views/preguntas.html
@@ -55,14 +55,14 @@
         <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/assets/image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
+              <div class="carousel-item active ">
+                <img src="../image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img src="/assets/image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
+                <img src="../image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img src="/assets/image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
+                <img src="../image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -80,7 +80,7 @@
           <section>
             <div class="container-fluid">
               <div class="row">
-                <div class="col-xs-3 col-sm-9 col-lg-12">
+                <div>
                   <h1>Preguntas Frecuentes</h1>
                   <div class="questionC ab">
                     <h2>¿Qué es HardwareShop?</h2>
@@ -104,9 +104,9 @@
         </div>
       </main>
       <footer>
-        <bottom><a href="./contacto.html">Contacto</a></bottom>
+       <a href="./contacto.html">Contacto</a>
        <P>Copyright &copy; todos los derechos reservados HardwareShop</P>
    </footer>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
