--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,6 +1,6 @@
 .fFather {
   display: flex;
-  height: 82vh,auto;
+  height:auto;
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
@@ -10,9 +10,9 @@
   background-color: rgba(255, 255, 255, 0.8);
   font-family: "Abril Fatface", cursive;
   display: block;
-  width: auto;
-  height: 79vh;
-  margin: 0 auto;
+  width: 100%;
+  height: auto;
+  margin: 20px auto;
   border: 3px solid grey;
   color: black;
   label {
@@ -34,6 +34,7 @@ button {
 input {
   font-family: "Abril Fatface", cursive;
   padding: 3px;
+  width: auto;
   color: white;
 }
 textarea {
