--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,7 +1,7 @@
 .pFather {
   border:none;
   display: flex;
-  height: 110vh,auto;
+  height: auto;
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
@@ -12,7 +12,7 @@
 }
 .productos {
   padding: 20px;
-  height: 100vh;
+  height: auto;
   width: 90%;
   border-radius: 3%;
   border: 3px solid rgb(32, 58, 82);
