--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -8,10 +8,12 @@
     margin: auto;
     width: 90%;
     height: auto;
+  
   }
   .main-container {
     height: auto;
-    padding: 13%;
+    width: auto;
+    padding: 0%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -36,6 +38,16 @@
       "t y z"
       "f f f";
   }
+  .sTitulo{
+    padding:0;
+    margin:0;
+    height: auto;
+  }
+  .sh1{
+    padding:0;
+    margin:0;
+    height: 100px;
+  }
   .menu{
     width: 100%;
     padding: 5px;
@@ -58,29 +70,44 @@
     width: 300px;
     height: 300px;
   }
-  footer {
-    height: auto;
-  }
-  @media only screen and (max-width: 768px) {
+}
+footer {
+  height: 100px;
+  width: 100%;
+}
+  @media only screen and (max-width: 768px) 
+  {
     body {
       background-color: rgb(11, 135, 243);
       text-align: center;
       height: auto;
     }
     main {
-      width: auto;
+      width:100%;
       height: auto;
     }
     .main-container {
       height: auto;
-      padding: 5%;
+      padding: 3%;
+      margin: 0;
       display: grid;
+      width: 100%;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      gap: 10px;
       grid-template-areas:
-        "ab j"
-        "c n";
+      
+      "ab j"
+      "c n";
+    }
+    .sTitulo{
+      padding:0;
+      margin:0;
+      height: auto;
+    }
+    .sh1{
+      padding:0;
+      margin:0;
+      height: 100px;
     }
     .main-container-marcas {
       width: 100%;
@@ -88,8 +115,8 @@
       height: auto;
       background-color: white;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(2,1fr);
+      grid-template-rows: repeat(2,1fr);
       gap: 10px;
       grid-template-areas:
         "p p "
@@ -100,28 +127,26 @@
         "z f";
     }
     .sector{
-      width: 300px;
-      height: 300px;
+      display: block;
+      height: auto;
+      width: auto;
+      border: solid grey 3px;
+      color: red;
+      font-size: 1.5em;
+      text-align: center;
       h2{
         font-size: 0.75em;
       }
     }
     .sector-img{
-      width: 100%, auto;
-      height: 180px;
-    }
-    .hijo {
-      width: auto;
-      border: solid rgb(4, 1, 15) 3px;
-      color: red;
-      font-size: 1.5em;
-      text-align: center;
-    }
+    width: 100% ;
+    height: 180px;
+   }
   }
   footer {
-    height: auto;
+  height:100px;
+  width: 100%;
   }
-
   @media only screen and (max-width: 500px) {
     body {
       background-color: black;
@@ -134,12 +159,11 @@
     }
     main {
       width: 100%;
-      height: auto;
-      display: grid;
+      height: 100%;
     }
     .main-container {
       height: auto;
-      padding: 8%;
+      padding:8%;
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       grid-template-rows: repeat(1, 1fr);
@@ -149,6 +173,10 @@
         "j "
         "c "
         "n";
+    }
+    .slide{
+      width:auto;
+      height: auto;
     }
     .main-container-marcas {
       width: 100%;
@@ -173,18 +201,34 @@
         "f";
     }
     .sector{
-      width: 250px;
-      height: 300px;
+      width: 1fr;
+      height: 1fr;
+      padding: 20px;
+      margin:top 30px;
+    }
+    .sHijo{
+      width: 100%;
+      height: auto;
     }
     .hijo {
-      // width: auto;
+      height: auto;
+      width: auto;
       border: solid grey 3px;
       color: white;
       font-size: auto;
       text-align: center;
     }
-    footer {
-      height: auto;
+    .politicsContent{
+      h1{
+        font-size:1.5em;
+      }
     }
   }
-}
+  .sector-img{
+    width: 85% ;
+    height: 180px;
+   }
+  footer {
+    height: 100px;
+    width: 100%;
+  }
